<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HospitalPacienteFragment">

    <fragment
        android:id="@+id/HospitalPacienteFragment"
        android:name="com.example.examenxml.ui.fragments.hospitalpacientefragment.HospitalPacienteFragment"
        android:label="@string/hospitalesypacientes"
        tools:layout="@layout/fragment_hospital_paciente"></fragment>
    <fragment
        android:id="@+id/PacientesFragment"
        android:name="com.example.examenxml.ui.fragments.pacientesfragment.PacientesFragment"
        android:label="@string/pacientes"
        tools:layout="@layout/fragment_pacientes"></fragment>
    <fragment
        android:id="@+id/DetalleFragment"
        android:name="com.example.examenxml.ui.fragments.detallefragment.DetalleFragment"
        android:label="@string/detalle"
        tools:layout="@layout/fragment_detalle"></fragment>
    <action
        android:id="@+id/action_global_hospitalpacientefragment"
        app:destination="@id/HospitalPacienteFragment" />
    <action
        android:id="@+id/action_global_pacientesfragment"
        app:destination="@id/PacientesFragment" />
    <action
        android:id="@+id/action_global_detallefragment"
        app:destination="@id/DetalleFragment" />
</navigation>