<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/indigo">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/hospitalCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:padding="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_violet"
            android:padding="5dp">

            <TextView
                android:id="@+id/textoUUIDHospital"
                android:layout_width="190dp"
                android:layout_height="77dp"
                android:layout_margin="8dp"
                android:text="@string/uuid"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textoNombreHospital"
                android:layout_width="146dp"
                android:layout_height="65dp"
                android:layout_margin="8dp"
                android:layout_marginEnd="12dp"
                android:text="@string/nombre_hospital"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.777"
                app:layout_constraintStart_toEndOf="@+id/textoUUIDHospital"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.172" />

            <TextView
                android:id="@+id/numeroCamasHospital"
                android:layout_width="147dp"
                android:layout_height="26dp"
                android:layout_margin="8dp"
                android:text="@string/numero_camas"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.068"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textoUUIDHospital"
                app:layout_constraintVertical_bias="0.238" />

            <TextView
                android:id="@+id/direccionHospital"
                android:layout_width="147dp"
                android:layout_height="26dp"
                android:layout_margin="8dp"
                android:text="@string/direccion"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.931"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textoNombreHospital"
                app:layout_constraintVertical_bias="0.164" />

            <Button
                android:id="@+id/deleteHospitalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/editar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/numeroCamasHospital"
                app:layout_constraintVertical_bias="0.9" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>